[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-leetcode"
version = "0.1.0"
description = "LeetCode CLI tool to browse and solve problems from the terminal"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Lee Hajun", email = "wklee610@gmail.com" }
]

dependencies = [
  "click>=8.0",
  "requests>=2.28",
  "browser-cookie3>=0.17.1",
  "tabulate>=0.9.0",
  "beautifulsoup4>=4.12.0"
]

[project.urls]
Homepage = "https://github.com/wklee610/leetcode-cli"
Repository = "https://github.com/wklee610/leetcode-cli"
Issues = "https://github.com/wklee610/leetcode-cli/issues"

[project.scripts]
leetcli = "leetcli.main:main"
